Updating for deployment

--- a/sample.env
+++ b/sample.env
@@ -1,6 +1,6 @@
 DB_NAME=puzzlehunt_db
 DB_PASSWORD=my_password
-DB_USER=user
+DB_USER=puzzlehunt
 DJANGO_SECRET_KEY=mysecretkey
 DOMAIN=your.domain-here.com
 CONTACT_EMAIL=sample_email@example.com
